# ArmPi

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  README_ja.md  datasets  readme.md
.github/workflows/: resume-task.yml  run-next-task.yml
armpi/: CMakeLists.txt  package.xml
armpi/scripts/: keyboard_control.py
armpi/src/armpi/: CMakeLists.txt  package.xml
armpi/src/armpi/scripts/: Subscriber.cpp
armpi/src/armpi_camera/src/: ArmpiCamera.cpp
armpi/src/armpi_chassis/: CMakeLists.txt
armpi/src/armpi_chassis/include/armpi_chassis/: ArmpiChassis.h
armpi/src/armpi_chassis/src/: ArmpiChassis.cpp
armpi/src/armpi_command_subscriber/: package.xml
armpi/src/armpi_command_subscriber/scripts/: ArmpiCommandSubscriber.cpp  ArmpiCommandSubscriber.h
armpi/src/armpi_control/: CMakeLists.txt  package.xml
armpi/src/armpi_control/include/armpi_control/: ArmpiCommandSubscriber.h  ArmpiControl.h
armpi/src/armpi_control/scripts/: test_driver.py  test_servo.py
armpi/src/armpi_control/src/: ArmpiCommandSubscriber.cpp  ArmpiControl.cpp
armpi/src/armpi_driver/: CMakeLists.txt  package.xml
armpi/src/armpi_driver/include/armpi_driver/: ArmpiDriver.h
armpi/src/armpi_driver/scripts/: test_armpi_driver.py
armpi/src/armpi_driver/src/: ArmpiDriver.cpp
armpi/src/armpi_msgs/: CMakeLists.txt  package.xml
armpi/src/armpi_msgs/msg/: RobotCommand.msg
armpi/src/armpi_servo/: CMakeLists.txt  package.xml
armpi/src/armpi_servo/include/armpi_servo/: ArmpiServo.h  ArmpiServoControl.h
armpi/src/armpi_servo/scripts/: ik_action_server.py
armpi/src/armpi_servo/src/: ArmpiServo.cpp  ArmpiServoControl.cpp
armpi/src/armpi_servo/srv/: ComputeArmIK.srv
armpi/src/robot_control/: CMakeLists.txt
armpi/src/scripts/: start_armpi_control.launch
datasets/: .gitignore
docs/: workflow.md
docs/ROS/: ros.md
docs/docker/: docker.md
model/: main.py  read_hdf.py
model/data_edit/: ArmpiDataset.py
model/networks/: mlp_network.py
model/train/: train.py
myapp/src/ai_model_service/: CMakeLists.txt
myapp/src/ai_model_service/scripts/: inference_server.py
myapp/src/armpi_camera/: CMakeLists.txt  package.xml
myapp/src/armpi_camera/include/armpi_camera/: ArmpiCamera.h
myapp/src/armpi_camera/src/: ArmpiCamera.cpp
myapp/src/armpi_command_publisher/: CMakeLists.txt  package.xml
myapp/src/armpi_command_publisher/include/armpi_command_publisher/: ArmpiCommandPublisher.h
myapp/src/armpi_command_publisher/src/: ArmpiCommandPublisher.cpp
myapp/src/armpi_controller/: CMakeLists.txt  package.xml
myapp/src/armpi_controller/include/armpi_controller/: AIController.h  ArmpiController.h  KeyboardController.h
myapp/src/armpi_controller/include/armpi_controller/keyboard/: KeyboardController.h  SDLHandler.h
myapp/src/armpi_controller/src/: AIController.cpp  ArmpiController.cpp  ArmpiControllerMain.cpp  KeyboardController.cpp
myapp/src/armpi_controller/src/ai/: AIController.cpp
myapp/src/armpi_controller/src/keyboard/: KeyboardController.cpp  SDLHandler.cpp
myapp/src/armpi_state_subscriber/: CMakeLists.txt  package.xml
myapp/src/armpi_state_subscriber/src/: JointStateSubscriber.cpp
myapp/src/collect_data/: CMakeLists.txt  package.xml
myapp/src/collect_data/include/collect_data/: CollectCamera.h  CollectCommand.h  CollectData.h  CollectJoint.h
myapp/src/collect_data/src/: CollectCamera.cpp  CollectCommand.cpp  CollectData.cpp  CollectJoint.cpp
myapp/src/publisher/: CMakeLists.txt  package.xml
myapp/src/publisher/scripts/: Publisher.cpp
myapp/src/scripts/: run_ai_controller.launch
python/: create_video.py
python/convert/: convert_bag_to_h5.py
ros/armpi/armpi_control/: CMakeLists.txt  package.xml
ros/armpi/armpi_control/scripts/: test_driver.py  test_servo.py
ros/armpi/armpi_control/src/: ArmpiControl.cpp
ros/armpi/armpi_servo/: package.xml
ros/armpi/armpi_servo/scripts/: test_servo.py
ros/armpi/armpi_servo/src/: ArmpiServo.cpp
ros/armpi/armpi_servo/srv/: ComputeArmIK.srv
ros/armpi/src/armpi_chassis/: package.xml
ros/myapp/ai_model_service/: CMakeLists.txt
ros/myapp/ai_model_service/scripts/: inference_server.py
ros/myapp/ai_model_service/srv/: PredictAction.srv
ros/myapp/armpi_controller/: CMakeLists.txt  package.xml
ros/myapp/armpi_controller/include/armpi_controller/: ArmpiController.h
ros/myapp/armpi_controller/include/armpi_controller/ai/: AIController.h  UserInput.h
ros/myapp/armpi_controller/include/armpi_controller/keyboard/: KeyboardController.h
ros/myapp/armpi_controller/src/: ArmpiController.cpp  ArmpiControllerMain.cpp
ros/myapp/armpi_controller/src/ai/: AIController.cpp  UserInput.cpp
ros/myapp/armpi_controller/src/keyboard/: KeyboardController.cpp
ros/myapp/armpi_controller/src/sdl/: SDLHandler.cpp
ros/myapp/collect_data/: package.xml
ros/myapp/collect_data/include/collect_data/: CollectData.h  CollectJoint.h
ros/myapp/collect_data/src/: CollectData.cpp  CollectJoint.cpp
ros/myapp/scripts/: run_ai_controller.launch
ros/myapp/src/ai_model_service/: package.xml  setup.py
ros/myapp/src/ai_model_service/model/: .gitignore
ros/myapp/src/ai_model_service/scripts/: inference_server.py
ros/myapp/src/ai_model_service/test/: test_inference_server.py
ros/myapp/src/armpi_controller/src/ai/: AIController.cpp
ros/myapp/src/armpi_controller/src/keyboard/: KeyboardController.cpp
ros/myapp/src/collect_data/: CMakeLists.txt
ros/share/armpi_operation_msgs/: package.xml
ros/share/armpi_operation_msgs/msg/: RobotCommand.msg
scripts/: analyze_h5.py  convert_bag_to_h5.py  create_video.py  docker_run.sh  docker_run_debug.sh  rsync.sh  rsync_armpi.sh  rsync_share.sh
scripts/convert/: convert_bag_to_h5.py  main.py
scripts/test/: dataset_check.py
share/src/armpi_operation_msgs/: CMakeLists.txt
share/src/armpi_operation_msgs/msg/: RobotCommand.msg
