<?xml version="1.0"?>
<package format="2">
  <name>armpi_camera</name>
  <version>1.0.0</version>
  <description>C++ implementation for ArmPi's visual processing node, subscribing to camera images and publishing results.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>   
  <build_depend>cv_bridge</build_depend>         
  <build_depend>opencv</build_depend>             

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>
</package>
