<?xml version="1.0"?>
<package format="2">
  <name>armpi_controller</name>
  <version>0.0.0</version>
  <description>The armpi_controller package</description>

  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>armpi_operation_msgs</build_depend>
  <build_depend>armpi_command_publisher</build_depend>
  <build_depend>collect_data</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>armpi_operation_msgs</exec_depend>
  <exec_depend>armpi_command_publisher</exec_depend>
  <exec_depend>collect_data</exec_depend>

</package>
