<?xml version="1.0"?>
<package format="2">
  <name>armpi_control</name>
  <version>0.0.0</version>
  <description>The armpi_control package</description>

  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>armpi_operation_msgs</build_depend>
  <build_depend>armpi_chassis</build_depend>
  <build_depend>armpi_servo</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>armpi_operation_msgs</exec_depend>
  <exec_depend>armpi_chassis</exec_depend>
  <exec_depend>armpi_servo</exec_depend>
</package>
