<package format="2">
  <name>armpi_servo</name>
  <version>0.0.0</version>
  <description>The armpi_servo package</description>
  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hiwonder_servo_msgs</build_depend> <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hiwonder_servo_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  </package>
